--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
+    "node-cron": "^4.2.1",
     "pg": "^8.18.0",
+    "qrcode-terminal": "^0.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "whatsapp-web.js": "^1.34.6",
     "wouter": "^3.9.0"
   },
   "devDependencies": {
@@ -29,7 +32,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
