--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "pg": "^8.18.0",
+    "puppeteer": "^24.37.3",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
