archivos nuevos para render

--- a/package.json
+++ b/package.json
@@ -1,113 +1,57 @@
 {
-
   "name": "gsm-control",
-
   "private": true,
-
   "version": "0.0.0",
-
   "type": "module",
-
   "scripts": {
-
     "dev": "concurrently \"vite\" \"npm run server\"",
-
-    "build": "vite build",
-
+    "build": "vite build && tsc -p server/tsconfig.json",
     "lint": "eslint .",
-
     "preview": "vite preview",
-
     "server": "tsx server/index.ts",
-
-    "start": "tsx server/index.ts"
-
+    "start": "node server/dist/index.js"
   },
-
   "dependencies": {
-
     "@tailwindcss/postcss": "^4.1.18",
-
     "@tailwindcss/vite": "^4.1.18",
-
     "@tanstack/react-query": "^5.90.21",
-
     "cors": "^2.8.6",
-
     "dotenv": "^17.2.4",
-
     "drizzle-orm": "^0.45.1",
-
     "express": "^5.2.1",
-
     "node-cron": "^4.2.1",
-
     "pg": "^8.18.0",
-
     "puppeteer": "^24.37.3",
-
     "qrcode-terminal": "^0.12.0",
-
     "react": "^19.2.0",
-
     "react-dom": "^19.2.0",
-
     "whatsapp-web.js": "^1.34.6",
-
     "wouter": "^3.9.0"
-
   },
-
   "devDependencies": {
-
     "@eslint/js": "^9.39.1",
-
     "@types/cors": "^2.8.19",
-
     "@types/express": "^5.0.6",
-
     "@types/node": "^24.10.1",
-
     "@types/node-cron": "^3.0.11",
-
     "@types/pg": "^8.16.0",
-
     "@types/qrcode-terminal": "^0.12.2",
-
     "@types/react": "^19.2.7",
-
     "@types/react-dom": "^19.2.3",
-
     "@vitejs/plugin-react": "^5.1.1",
-
     "autoprefixer": "^10.4.24",
-
     "concurrently": "^9.2.1",
-
     "eslint": "^9.39.1",
-
     "eslint-plugin-react-hooks": "^7.0.1",
-
     "eslint-plugin-react-refresh": "^0.4.24",
-
     "globals": "^16.5.0",
-
     "lucide-react": "^0.563.0",
-
     "postcss": "^8.5.6",
-
     "recharts": "^3.7.0",
-
     "tailwindcss": "^4.1.18",
-
     "tsx": "^4.21.0",
-
     "typescript": "~5.9.3",
-
     "typescript-eslint": "^8.48.0",
-
     "vite": "^7.3.1"
-
   }
-
 }
