--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.21",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "pg": "^8.18.0",
-    "puppeteer": "^24.37.3",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "whatsapp-web.js": "^1.34.6",
     "wouter": "^3.9.0"
   },
   "devDependencies": {
