--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tanstack/react-query": "^5.90.21",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
+    "drizzle-kit": "^0.31.9",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
